feature/fix-for-admin-panel: add scroll to timepicker, update tokens

--- a/projects/front-components/src/lib/components/timepicker/timepicker.component.html
+++ b/projects/front-components/src/lib/components/timepicker/timepicker.component.html
@@ -4,6 +4,7 @@
 	[formControl]="timepickerCtrl"
 	[popoverTriggerFor]="dropdownTime"
 	[popoverTriggerDisabled]="timepickerCtrl.disabled"
+	(click)="scrollToTime(timepickerCtrl.value)"
 >
 	<ss-lib-dropdown-list
 		#dropdownTime
@@ -12,6 +13,7 @@
 	>
 		@for (time of timeIntervals; track $index) {
 			<ss-lib-dropdown-item
+				#timeRow
 				[value]="time"
 				(click)="selectTime(time)"
 			/>
