--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -627,3 +627,9 @@
 
 	<button (click)="submitOtp()">Submit otp</button>
 </div>
+
+<ss-lib-button
+	[type]="ButtonType.Primary"
+	[text]="'левый sidePage'"
+	(click)="openRightSidebar()"
+/>
