--- a/projects/front-components/src/lib/components/generic-popup/generic-popup.component.html
+++ b/projects/front-components/src/lib/components/generic-popup/generic-popup.component.html
@@ -1,5 +1,6 @@
 <div
 	class="generic-modal"
+	[@openPanel]="state"
 	(click)="preventClick($event)"
 >
 	<ng-container [ngComponentOutlet]="component"></ng-container>
