--- a/projects/front-components/src/lib/components/text/text.component.html
+++ b/projects/front-components/src/lib/components/text/text.component.html
@@ -3,6 +3,7 @@
 	[class.ellipsis]="isEllipsis()"
 	[class.line-clamp]="isLineClamp()"
 	[class.underline]="isUnderline()"
+	[class.white-space-nowrap]="isNoWrap()"
 	[style.color]="color()"
 	[style.text-align]="align()"
 	[style.-webkit-line-clamp]="getLineClampCount()"
