--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -655,16 +655,20 @@
 	<ss-lib-tabs
 		[tabs]="tabs"
 		[actionsRef]="actions"
+		[activeTabIndex]="indexTab"
+		(changeIndexEmit)="changeTab($event)"
 	></ss-lib-tabs>
 	<ng-template #actions>
 		<ss-lib-button
 			[size]="ExtraSize.md"
 			[text]="'1 кнопка'"
+			(click)="changeIndex()"
 		></ss-lib-button>
 		<ss-lib-button
 			[size]="ExtraSize.md"
 			[text]="'2 кнопка'"
 		></ss-lib-button>
 	</ng-template>
-	<router-outlet></router-outlet>
 </div>
+
+<span>{{ indexTab }}</span>
