--- a/projects/front-components/src/lib/components/tabs/tabs.component.scss
+++ b/projects/front-components/src/lib/components/tabs/tabs.component.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	height: 64px;
 	padding: 0 24px;
+	border-bottom: 1px solid var(--border-primary);
 
 	&__block {
 		display: flex;
