--- a/projects/front-components/src/lib/components/tab/tab.component.html
+++ b/projects/front-components/src/lib/components/tab/tab.component.html
@@ -6,27 +6,28 @@
 	[popoverTriggerDisabled]="!viewChevron()"
 	(isPopoverOpenEmit)="checkStatePopover($event)"
 >
-	<ss-lib-text
-		[color]="getColor()"
-		[type]="TextType.BodyMd"
-		[weight]="TextWeight.Medium"
-		[isNoWrap]="true"
-	>
-		{{ text() }}
-	</ss-lib-text>
+	<div class="ss-lib-tab__tab">
+		<ss-lib-text
+			[color]="getColor()"
+			[type]="TextType.BodyMd"
+			[weight]="TextWeight.Medium"
+			[isNoWrap]="true"
+		>
+			{{ text() }}
+		</ss-lib-text>
 
-	<ss-lib-icon
-		*ngIf="viewChevron()"
-		[icon]="IconType.ChevronDown"
-		[color]="getColor()"
-		[width]="'20'"
-		[height]="'22'"
-		[@rotate]="stateRotate()"
-	>
-	</ss-lib-icon>
-
-	<div
-		*ngIf="active()"
-		class="ss-lib-tab__active-indicator"
-	></div>
+		<ss-lib-icon
+			*ngIf="viewChevron()"
+			[icon]="IconType.ChevronDown"
+			[color]="getColor()"
+			[width]="'20'"
+			[height]="'22'"
+			[@rotate]="stateRotate()"
+		>
+		</ss-lib-icon>
+	</div>
 </div>
+<div
+	*ngIf="active()"
+	class="ss-lib-tab__active-indicator"
+></div>
