--- a/projects/front-components/src/lib/components/tabs/tabs.component.scss
+++ b/projects/front-components/src/lib/components/tabs/tabs.component.scss
@@ -1,6 +1,5 @@
 .ss-lib-tabs {
 	display: flex;
-	align-items: center;
 	height: 64px;
 	padding: 0 24px;
 	border-bottom: 1px solid var(--border-primary);
@@ -28,7 +27,8 @@
 	&__actions {
 		display: flex;
 		gap: 12px;
-		align-items: center;
+		padding: 6px 0 0 0;
 		justify-content: right;
+		align-items: flex-start;
 	}
 }
