--- a/projects/front-components/src/lib/components/progress/progress.component.html
+++ b/projects/front-components/src/lib/components/progress/progress.component.html
@@ -1,1 +1,6 @@
-<div class="ss-lib-progress"></div>
+<div class="ss-lib-progress">
+	<div
+		class="ss-lib-progress__active"
+		[style.width]="progress().toString() + '%'"
+	></div>
+</div>
