--- a/projects/front-components/src/lib/components/progress/progress.component.scss
+++ b/projects/front-components/src/lib/components/progress/progress.component.scss
@@ -1,7 +1,12 @@
 .ss-lib-progress {
-	height: 4px;
-	background-color: var(--surface-action);
+	height: 8px;
+	background-color: var(--surface-disabled);
 	border-radius: 4px;
-	position: absolute;
 	display: inline-flex;
+	width: 100%;
+
+	&__active {
+		background-color: var(--surface-action);
+		border-radius: 4px;
+	}
 }
