--- a/projects/front-components/src/lib/components/load-pagination/load-pagination.component.html
+++ b/projects/front-components/src/lib/components/load-pagination/load-pagination.component.html
@@ -1,5 +1,5 @@
-<div class="ss-lib-pagination">
-	<div class="ss-lib-pagination__button">
+<div class="ss-lib-load-pagination">
+	<div class="ss-lib-load-pagination__button">
 		<ss-lib-button
 			*ngIf="viewButton"
 			[type]="ButtonType.Secondary"
@@ -7,7 +7,7 @@
 			(click)="addOffset()"
 		></ss-lib-button>
 	</div>
-	<div class="ss-lib-pagination__block-progress">
+	<div class="ss-lib-load-pagination__block-progress">
 		<ss-lib-text
 			[color]="Colors.TextBody2"
 			[type]="TextType.BodyMd"
