--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -673,11 +673,11 @@
 
 <span>{{ indexTab }}</span>
 
-<ss-lib-pagination
+<ss-lib-load-pagination
 	[limit]="20"
 	[total]="102"
 	[(offset)]="offset"
 >
-</ss-lib-pagination>
+</ss-lib-load-pagination>
 
 {{ offset() }}
