--- a/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
+++ b/projects/front-components/src/lib/components/dropdown-list/dropdown-list.component.html
@@ -13,9 +13,37 @@
 				<ss-lib-divider />
 			}
 
-			@if (!!optionsContent) {
+			@if (!!optionsContent()) {
 				<div class="dropdown__options-content">
-					<ng-content></ng-content>
+					@if (isDraggable()) {
+						<div
+							class="draggable-list"
+							cdkDropList
+							(cdkDropListDropped)="onDropItem($event)"
+						>
+							@for (option of optionsContent(); track option) {
+								<ss-lib-dropdown-item
+									cdkDrag
+									class="draggable-item"
+									[label]="option.label()"
+									[value]="option.value()"
+									[icon]="option.icon()"
+									[isDestructive]="option.isDestructive()"
+									[isDisabled]="option.isDisabled()"
+								>
+									@if (option.itemContent()) {
+										<ng-container
+											[ngTemplateOutlet]="
+												option.itemContent()!
+											"
+										></ng-container>
+									}
+								</ss-lib-dropdown-item>
+							}
+						</div>
+					} @else {
+						<ng-content></ng-content>
+					}
 				</div>
 			}
 		</ss-lib-scrollbar>
